-- Auto-generated SQL script
-- Generated by: generate-sql.ts

BEGIN;

DROP TABLE IF EXISTS Timesheet;
DROP TABLE IF EXISTS Employee_Project;
DROP TABLE IF EXISTS Invoice;
DROP TABLE IF EXISTS Project;
DROP TABLE IF EXISTS Employee;
DROP TABLE IF EXISTS Client;
DROP TABLE IF EXISTS Department;

CREATE TABLE Department (
  department_id INT PRIMARY KEY,
  name VARCHAR(100) NOT NULL,
  manager_employee_id INT NULL
);

CREATE TABLE Employee (
  employee_id INT PRIMARY KEY,
  first_name VARCHAR(50) NOT NULL,
  last_name VARCHAR(50) NOT NULL,
  email VARCHAR(150) NOT NULL UNIQUE,
  hire_date DATE NOT NULL,
  job_title VARCHAR(100) NOT NULL,
  salary DECIMAL(12,2) NOT NULL,
  department_id INT NOT NULL REFERENCES Department(department_id)
);

ALTER TABLE Department
  ADD CONSTRAINT fk_department_manager
  FOREIGN KEY (manager_employee_id)
  REFERENCES Employee(employee_id);

CREATE TABLE Client (
  client_id INT PRIMARY KEY,
  name VARCHAR(150) NOT NULL,
  industry VARCHAR(100) NOT NULL,
  contact_name VARCHAR(100) NOT NULL,
  contact_email VARCHAR(150) NOT NULL,
  contact_phone VARCHAR(30) NOT NULL
);

CREATE TABLE Project (
  project_id INT PRIMARY KEY,
  client_id INT NOT NULL REFERENCES Client(client_id),
  name VARCHAR(150) NOT NULL,
  description TEXT NOT NULL,
  start_date DATE NOT NULL,
  end_date DATE NULL,
  status VARCHAR(30) NOT NULL,
  budget DECIMAL(12,2) NOT NULL
);

CREATE TABLE Employee_Project (
  employee_id INT NOT NULL REFERENCES Employee(employee_id),
  project_id INT NOT NULL REFERENCES Project(project_id),
  assignment_start_date DATE NOT NULL,
  role_on_project VARCHAR(100) NOT NULL,
  allocation_percent DECIMAL(5,2) NOT NULL,
  assignment_end_date DATE NULL,
  PRIMARY KEY (employee_id, project_id, assignment_start_date)
);

CREATE TABLE Timesheet (
  timesheet_id INT PRIMARY KEY,
  employee_id INT NOT NULL REFERENCES Employee(employee_id),
  project_id INT NOT NULL REFERENCES Project(project_id),
  work_date DATE NOT NULL,
  hours DECIMAL(4,2) NOT NULL,
  billable_flag BOOLEAN NOT NULL,
  notes TEXT NULL
);

CREATE TABLE Invoice (
  invoice_id INT PRIMARY KEY,
  project_id INT NOT NULL REFERENCES Project(project_id),
  invoice_date DATE NOT NULL,
  amount DECIMAL(12,2) NOT NULL,
  status VARCHAR(30) NOT NULL,
  notes TEXT NULL
);